--- a/app/views/issues/_issue.html.erb
+++ b/app/views/issues/_issue.html.erb
@@ -2,8 +2,12 @@
   <% if issue.point && issue.point != "" %>
     <div class="issue_point"><%= issue.point %></div>
   <% end %>
+  <div class="issue_name_wrapper">
   <p class="issue_name"><%= issue.name %><p>
-  <span class="issue_about"><%= issue.about %></span>
+  </div>
+  <div class="issue_about_wrapper">
+    <span class="issue_about"><%= issue.about %></span>
+  </div>
   <%= link_to "削除", issue, method: :delete, class: "issue_menu delete_issue", data: {confirm: "Issue を削除するぞ。"} %>
   <%= link_to "編集", edit_issue_path(issue.id), class: "issue_menu edit_issue" %>
 </div>
