--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -2,6 +2,11 @@
 <div class="row">
   <h1>Issue</h1>
   <%= link_to "Issueを作成", new_issue_path, class: "btn btn-lg btn-primary btn-new-issue" %>
+  <div class="btn-new-issue-from-github">
+    <%= link_to issues_import_path do %>
+      <i class="fab fa-github-square"></i>
+    <% end %>
+  </div>
   <div id="issues">
     <% if @issues.any? %>
       <%= render @issues %>
