--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,10 @@
 <% provide(:title, 'ユーザー') %>
 <h1>ユーザー</h1>
 
-<%= will_paginate %>
-
 <ul class="users">
   <%= render @users %>
 </ul>
 
-<%= will_paginate %>
+<div class="paginate users_paginate">
+  <%= paginate @users %>
+</div>
