--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -135,6 +135,61 @@ footer {
 }
 
 
+/* ----- home ----- */
+.home_wrapper {
+  margin: -16px calc((100% - 100vw)/2);
+
+  .jumbotron {
+    margin-bottom: 0;
+  }
+
+  h1 {
+    color: #111;
+    font-size: 2.5em;
+    letter-spacing: -1px;
+  }
+
+  h2 {
+    margin-bottom: 30px;
+    color: #111;
+    font-size: 3.5em;
+    font-weight: bold;
+  }
+
+  .home_top, .home_container_3 {
+    background-color: #fff;
+    img {
+      width: 70%;
+    }
+  }
+
+  .home_container_2 {
+    border-radius: 0;
+    background-color: #1a1a1a;
+    padding-bottom: 100px;
+    h2 {
+      color: #fff;
+    }
+    .home_p_container {
+      width: 420px;
+      margin: 0 auto 70px auto;
+    }
+    p {
+      font-size: 1.2em;
+      line-height: 1.5;
+      color: #fff;
+    }
+    img {
+      margin: 5px;
+    }
+  }
+
+  .btn-new-user {
+    margin: 100px 0;
+  }
+}
+
+
 /* ----- sidebar ----- */
 
 aside {
