--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -384,7 +384,7 @@ input {
   }
 }
 
-aside {
+.aside_user {
   border-radius: 3px;
   box-shadow: 2px 2px 3px 3px rgba(0,0,0,0.1);
   padding-bottom: 15px;
