トップページがちょっとダサかったので変更

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -159,6 +159,8 @@ footer {
   .home_top, .home_container_3 {
     background-color: #fff;
     img {
+      margin-top: 50px;
+      margin-bottom: 100px;
       width: 70%;
     }
   }
@@ -166,7 +168,8 @@ footer {
   .home_container_2 {
     border-radius: 0;
     background-color: #1a1a1a;
-    padding-bottom: 100px;
+    padding-top: 50px;
+    padding-bottom: 130px;
     h2 {
       color: #fff;
     }
