--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,10 +3,10 @@
     <h1 class="home_title_h1">Planning Poker Online</h1>
 
     <h2 class="home_about_1">
-      世界のエンジニアに、見積もりと驚きを。
+      世界のエンジニアに、見積もりの驚きを。
     </h2>
     <div class="home_top_img">
-      <%= image_tag("home_top_img.png") %>
+      <%= image_tag("macbook.jpg") %>
     </div>
   </div>
   <div class="home_container_2 center jumbotron">
