--- a/app/views/issues/new.html.erb
+++ b/app/views/issues/new.html.erb
@@ -11,7 +11,7 @@
     <%= form_for @issue do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
 
-      <%= f.label :name, "issue概要" %>
+      <%= f.label :name, "issue名" %>
       <%= f.text_field :name, class: 'form-control' %>
 
       <%= f.label :about, "説明" %>
@@ -27,8 +27,8 @@
                             ["21", "21"],
                             ["40", "40"],
                             ["x", "x"]], class: 'form-control point_form', :include_blank => true %>
-
       <%= f.submit "登録", class: "btn btn-primary" %>
     <% end %>
+    <p>※注意 既に登録されているものと全く同じ名前のissueは登録されないぞ</p>
   </div>
 </div>
