--- a/app/views/issues/import.html.erb
+++ b/app/views/issues/import.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'githubから登録') %>
 <div class="return">
-  <%= link_to @return_url do %>
+  <%= link_to issues_path do %>
     <i class="fab fa-youtube fa-4x fa-flip-horizontal"></i>
   <% end %>
 </div>
