--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -634,7 +634,7 @@ span.picture {
     margin-top: 5px;
     text-overflow: ellipsis;
     white-space: nowrap;
-    a:visited {
+    a {
       color: #444;
     }
   }
@@ -659,6 +659,32 @@ span.picture {
     color: #666;
     font-size: 17px;
     line-height: 1.5;
+  }
+}
+
+.issue_show_container {
+  padding: 30px 60px 70px 60px;
+  font-size: 1.2em;
+  line-height: 1.7;
+  border: 1px solid #aaa;
+
+  .issue_point {
+    float: left;
+    text-align: center;
+    color: #fff;
+    background-color: #367319;
+    margin-top: -25px;
+    margin-left: -55px;
+    width: 48px;
+    border-radius: 24px;
+    font-size: 28px;
+  }
+
+  .issue_menu {
+    float: right;
+    display: inline;
+    margin-top: 20px;
+    margin-left: 30px;
   }
 }
 
