--- a/app/views/issues/_issue.html.erb
+++ b/app/views/issues/_issue.html.erb
@@ -4,7 +4,7 @@
   <% end %>
   <p class="issue_name"><%= link_to issue.name, issue %></p>
   <div class="issue_about_wrapper">
-    <span class="issue_about"><%= simple_format(issue.about) %></span>
+    <span class="issue_about"><%= issue.about %></span>
   </div>
   <%= link_to "削除", issue, method: :delete, class: "issue_menu delete_issue", data: {confirm: "Issue を削除するぞ。"} %>
   <%= link_to "編集", edit_issue_path(issue.id), class: "issue_menu edit_issue" %>
